argocd/apps/media-server/bazarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        cpu.performance: high
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
            - name: DOCKER_MODS
              value: wayller/bazarr-mod-subsync:latest
          image: linuxserver/bazarr:latest@sha256:88272d031e268a5d10035e2707fc095417dba9794a7a4a59b51f01e6f9b74f65
          imagePullPolicy: Always
          name: bazarr
          resources:
            limits:
              cpu: 500m
              memory: 750Mi
            requests:
              cpu: 100m
              memory: 400Mi
          ports:
            - containerPort: 6767
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/media/Movies
              name: movies
            - mountPath: /data/media/TV
              name: tv
          startupProbe:
            httpGet:
              path: /
              port: 6767
            initialDelaySeconds: 300
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 6767
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          hostPath:
            path: /zpool/k8s/bazarr/config
          # persistentVolumeClaim:
          #   claimName: config
        - name: movies
          hostPath:
            path: /data/media/Movies
          # nfs:
          #   server: marcus-server.lan
          #   path: /data/media/Movies
        - name: tv
          hostPath:
            path: /data/media/TV
          # nfs:
          #   server: marcus-server.lan
          #   path: /data/media/TV
