argocd/apps/media-server/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr.k8s.yanello.net
      http:
        paths:
          - backend:
              service:
                name: bazarr
                port:
                  number: 6767
            path: /
            pathType: Prefix
