argocd/apps/media-server/bazarr/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bazarr-vs
spec:
  hosts:
  - bazarr.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: bazarr
        port:
          number: 6767
